fixed hero section's height on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,12 +48,6 @@
   height: 100vh;
 }
 
-@media screen and (max-width: 1280px) {
-  .hero {
-    height: calc(100vh - var(--headerHeightMobile));
-  }
-}
-
 @media screen and (max-width: 720px) {
   .hero__heading {
     width: 80vw;
@@ -65,6 +59,9 @@
 }
 
 @media screen and (max-width: 540px) {
+  .hero {
+    height: calc(100vh - var(--headerHeightMobile));
+  }
   .hero__subheading {
     font-size: 1.2rem;
   }
